[package]
name = "gstream_prac"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gstreamer = "0.21.3"
gstreamer-app = "0.21.2"
gstreamer-video = "0.21.2"
anyhow = "1.0.79"
glib = "0.18.5"
crossterm = "0.27.0"

[dependencies.tui]
version = "0.19.0"
default-features = false
features = ["crossterm"]
